--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <app-header></app-header>
 <!--<router-outlet></router-outlet>-->
-<!--<app-ejemplo></app-ejemplo>
+<!--<app-ejemplo></app-ejemplo>-->
 
-<app-profile></app-profile>-->
+<app-profile></app-profile>
 <app-existing-product></app-existing-product>
