--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -12,6 +12,9 @@
         <mat-form-field class="example-full-width">
             <mat-label>Usuario</mat-label><br>
             <textarea matInput placeholder="Usuario" [(ngModel)]="inputUser" name="inputUser" id="inputU"></textarea>
+            <mat-error *ngIf="passwordFormControl.hasError('required')">
+                please enter a valid Contraseña (verificar si aun funciona)
+            </mat-error>
         </mat-form-field>
 
         <mat-form-field class="example-full-width">
