--- a/src/app/hazte-cliente/hazte-cliente.component.html
+++ b/src/app/hazte-cliente/hazte-cliente.component.html
@@ -76,7 +76,7 @@
       </div>
     </div>
     
-    <button class="btn btn-primary">Guardar</button>  <button class="btn btn-primary" (click)=" comprobarDatos()" >Comprobar</button>
+    <button class="btn btn-primary" (click)="guardaDatos()">Guardar</button>  <button class="btn btn-primary" (click)=" comprobarDatos()" >Comprobar</button>
     <h1>{{mensajeEmail}}</h1>
     <h1>{{mensajePhone}}</h1>
     <h1>{{mensajeUser}}</h1>
