--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -31,16 +31,16 @@
                         <h3>Redes sociales</h3>
                         <div class="btn-group">
                             <a href="https://www.facebook.com/" target="_blank" class="btn btn-primary">
-                                <i class="fab fa-facebook-f"></i> 
+                                <i class="fab fa-facebook-f">facebook</i>
                             </a>
                             <a href="https://www.twitter.com/" target="_blank" class="btn btn-info">
-                                <i class="fab fa-twitter"></i> 
+                                <i class="fab fa-twitter">twitter</i>
                             </a>
                             <a href="https://www.linkedin.com/" target="_blank" class="btn btn-primary">
-                                <i class="fab fa-linkedin-in"></i> 
+                                <i class="fab fa-linkedin-in">linkedin</i>
                             </a>
                             <a href="https://www.instagram.com/" target="_blank" class="btn btn-danger">
-                                <i class="fab fa-instagram"></i> 
+                                <i class="fab fa-instagram">instagram</i>
                             </a>
                         </div>
                     </div>
