--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-sm bg-success navbar-success mt-5">
-  <div class="container-fluid">
+  <div class="container">
     <a class="navbar-brand" style="color: gold; margin-right: 20px;" href="#" role="button" (click)="toggleMenu()"
       routerLink="cuentas">Mi Área
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-check-fill"
@@ -23,7 +23,7 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="operaciones"><button id="operaciones" type="button"
-            class="btn btn-outline-light">Transferencias</button></a>
+            class="btn btn-outline-light">Operaciones</button></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="productos"><button id="productos" type="button"
