--- a/src/app/componentes/modal-profiles/modal-profiles.component.html
+++ b/src/app/componentes/modal-profiles/modal-profiles.component.html
@@ -44,6 +44,14 @@
           <span class="input-group-text spw-3">Tarjeta credito</span>
           <input type="text" class="form-control" aria-label="Tarjeta credito" aria-describedby="Tarjeta credito" [(ngModel)]="credit_card" [value]="credit_card">
         </div>
+        <div class="input-group mb-2">
+          <span class="input-group-text spw-3">Usauario</span>
+          <input type="text" class="form-control" aria-label="Usuario" aria-describedby="Usuario" [(ngModel)]="user" [value]="user">
+        </div>
+        <div class="input-group mb-2">
+          <span class="input-group-text spw-3">Contraseña</span>
+          <input type="text" class="form-control" aria-label="Contraseña" aria-describedby="Contraseña" [(ngModel)]="password" [value]="password">
+        </div>
       </div>
       <div class="text-center">
         <p>{{ message }}</p>
