--- a/src/app/hazte-cliente/hazte-cliente.component.html
+++ b/src/app/hazte-cliente/hazte-cliente.component.html
@@ -1,58 +1,55 @@
-<div class="container">
-  <h1>Hazte Cliente</h1>
-  <form class="needs-validation">
-    <div class="form-row">
-      <div class="col-md-4 mb-3">
-        <label for="nombre">Nombre:</label>
-        <input type="text" class="form-control" id="nombre" [(ngModel)]="name" required
-          [ngModelOptions]="{standalone: true}">
-        <div class="valid-tooltip">
-
-        </div>
-      </div>
-      <div class="col-md-4 mb-3">
-        <label for="apellidos">Apellidos:</label>
-        <input type="text" class="form-control" id="apellidos" [(ngModel)]="secondName" required
-          [ngModelOptions]="{standalone: true}">
-        <div class="valid-tooltip">
-        </div>
-      </div>
-    </div>
-    <div class="form-row">
-      <div class="col-md-4 mb-3">
-        <label for="telefono">Telefono:</label>
-        <input type="text" class="form-control" id="telefono" [(ngModel)]="phone" required
-          [ngModelOptions]="{standalone: true}">
-        <div class="valid-tooltip">
-        </div>
-      </div>
-      <div class="col-md-4 mb-3">
-        <label for="documentodeidentidad">Documento de Identidad</label>
-        <div class="input-group">
-          <div class="input-group-prepend">
-            <span class="input-group-text"><select [(ngModel)]="identificationType"
-                [ngModelOptions]="{standalone: true}" name="identificationType">
-                <option value="0">Tipo de Documento</option>
-                <option
-                  value="identificationType._links.self.href.substring(identificationType._links.self.href.lastIndexOf('/')+1)"
-                  *ngFor="let identificationType of identificationTypes">{{identificationType.description}}</option>
-              </select></span>
+<div class="text-center">
+  <div class="container">
+    <h1>Hazte Cliente</h1>
+    <form class="needs-validation">
+      <div class="form-row">
+        <div class="col-md-4 mb-3">
+          <label for="nombre">Nombre:</label>
+          <input type="text" class="form-control" id="nombre" [(ngModel)]="name" required
+            [ngModelOptions]="{standalone: true}">
+          <div class="valid-tooltip">
           </div>
-          <input type="text" class="form-control" id="documentodeidentidad" placeholder="Número de Documento"
-            [(ngModel)]="identification" required [ngModelOptions]="{standalone: true}" required>
-          <div class="invalid-tooltip">
+        </div>
+        <div class="col-md-4 mb-3">
+          <label for="apellidos">Apellidos:</label>
+          <input type="text" class="form-control" id="apellidos" [(ngModel)]="secondName" required
+            [ngModelOptions]="{standalone: true}">
+          <div class="valid-tooltip">
           </div>
         </div>
       </div>
-    </div>
-    <div>
-      <div>
+      <div class="form-row">
+        <div class="col-md-4 mb-3">
+          <label for="telefono">Telefono:</label>
+          <input type="text" class="form-control" id="telefono" [(ngModel)]="phone" required
+            [ngModelOptions]="{standalone: true}">
+          <div class="valid-tooltip">
+          </div>
+        </div>
+        <div class="col-md-4 mb-3">
+          <label for="documentodeidentidad">Documento de Identidad</label>
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><select [(ngModel)]="identificationType" name="identificationType">
+                  <option value="0">Tipo de Documento</option>
+                  <option
+                    value="{{identificationType1._links.self.href.substring(identificationType1._links.self.href.lastIndexOf('/')+1)}}"
+                    *ngFor="let identificationType1 of identificationTypes">{{identificationType1.description}}</option>
+                </select></span>
+            </div>
+            <input type="text" class="form-control" id="documentodeidentidad" placeholder="Número de Documento"
+              [(ngModel)]="identification" required [ngModelOptions]="{standalone: true}" required>
+            <div class="invalid-tooltip">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="form-row">
         <div class="col-md-4 mb-3">
           <label for="email">Email:</label>
           <input type="text" id="email" class="form-control" [(ngModel)]="email" required
             [ngModelOptions]="{standalone: true}">
           <div class="invalid-tooltip">
-
           </div>
         </div>
         <div class="col-md-4 mb-3">
@@ -61,24 +58,35 @@
             <div class="input-group-prepend">
               <span class="input-group-text" id="inputGroupPrepend2">👥</span>
             </div>
-            <input type="text" class="form-control" id="usuario" [(ngModel)]="user" [ngModelOptions]="{standalone: true}"
-            required>
+            <input type="text" class="form-control" id="usuario" [(ngModel)]="user"
+              [ngModelOptions]="{standalone: true}" required>
           </div>
+        </div>
+
+        <div>
+
         </div>
         <div class="col-md-4 mb-3">
           <label for="contraseña">Contraseña</label>
-          <input type="text" class="form-control" id="password" [(ngModel)]="password"
-            [ngModelOptions]="{standalone: true}" required>
-          <div class="invalid-tooltip">
-
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="inputGroupPrepend2">👥</span>
+            </div>
+            <input type="password" class="form-control" id="password" name="password" [(ngModel)]="password" [ngModelOptions]="{standalone: true}" required>
+            <div class="invalid-tooltip"></div>
           </div>
+          <button (click)="togglePasswordVisibility()">Mostrar contraseña</button>
         </div>
+        </div>
+      
+      <div>
+        <button class="btn btn-primary" (click)="guardaDatos()">Guardar</button>
+        <button class="btn btn-primary" (click)="comprobarDatos()">Comprobar</button>
+        <h1>{{mensajeEmail}}</h1>
+        <h1>{{mensajePhone}}</h1>
+        <h1>{{mensajeUser}}</h1>
+        <h1>{{mensaje}}</h1>
       </div>
-    </div>
-    
-    <button class="btn btn-primary" (click)="guardaDatos()">Guardar</button>  <button class="btn btn-primary" (click)=" comprobarDatos()" >Comprobar</button>
-    <h1>{{mensajeEmail}}</h1>
-    <h1>{{mensajePhone}}</h1>
-    <h1>{{mensajeUser}}</h1>
-  </form>
+    </form>
+  </div>
 </div>
