--- a/src/app/componentes/modal-profiles/modal-profiles.component.html
+++ b/src/app/componentes/modal-profiles/modal-profiles.component.html
@@ -2,27 +2,29 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header justify-content-left">
-        <h5 class="modal-title ">Datos de perfiles</h5>
+        <h5 class="modal-title ">Datos de perfil</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
 
       <div class="modal-body text-center">
         <div class="mb-3">
           <img [src]="getImage(image)" [alt]="first_name" class="rounded mb-3 img-size" id="setImage"><br>
-          <label for="file-input" class="text-primary text-decoration-none">Editar imagen</label>
+          <label for="file-input" class="text-primary text-decoration-none">Cambiar foto del perfil</label>
           <input type="file" (change)="fileUpload($event)" class="d-none" id="file-input" accept=".jpg, .png, .gif">
         </div>
+
         <div class="input-group mb-2">
-          <span class="input-group-text spw-3">Nombre</span>
-          <input type="text" class="form-control" aria-label="Nombre" aria-describedby="Nombre" [(ngModel)]="first_name" [value]="first_name">
-        </div>
-        <div class="input-group mb-2">
-          <span class="input-group-text spw-3">Apellido</span>
-          <input type="text" class="form-control" aria-label="Apellido" [(ngModel)]="last_name" [value]="last_name">
+          <span class="input-group-text spw-3">Nombre y apellido</span>
+          <input type="text" aria-label="Nombre" aria-describedby="Nombre" class="form-control" [(ngModel)]="first_name" [value]="first_name">
+          <input type="text" aria-label="Apellido" aria-describedby="Apellido" class="form-control" [(ngModel)]="last_name" [value]="last_name">
         </div>
         <div class="input-group mb-2">
           <span class="input-group-text spw-3">DNI/NIF/NIE</span>
           <input type="text" class="form-control" aria-label="Identificacion" aria-describedby="Identificacion" [(ngModel)]="identification" [value]="identification">
+        </div>
+        <div class="input-group mb-2">
+          <span class="input-group-text spw-3">Dirección</span>
+          <input type="text" class="form-control" aria-label="Dirección" aria-describedby="Dirección" [(ngModel)]="address" [value]="address">
         </div>
         <div class="input-group mb-2">
           <span class="input-group-text spw-3">Provincia</span>
@@ -44,13 +46,16 @@
           <span class="input-group-text spw-3">Tarjeta credito</span>
           <input type="text" class="form-control" aria-label="Tarjeta credito" aria-describedby="Tarjeta credito" [(ngModel)]="credit_card" [value]="credit_card">
         </div>
+        <div class="mb-2">
+          <p></p>
+        </div>
         <div class="input-group mb-2">
           <span class="input-group-text spw-3">Usauario</span>
-          <input type="text" class="form-control" aria-label="Usuario" aria-describedby="Usuario" [(ngModel)]="user" [value]="user">
+          <input type="text" class="form-control" aria-label="Usuario" aria-describedby="Usuario" [(ngModel)]="users.user" [value]="users.user">
         </div>
         <div class="input-group mb-2">
           <span class="input-group-text spw-3">Contraseña</span>
-          <input type="text" class="form-control" aria-label="Contraseña" aria-describedby="Contraseña" [(ngModel)]="password" [value]="password">
+          <input type="password" class="form-control" aria-label="Contraseña" aria-describedby="Contraseña" [(ngModel)]="users.password" [value]="users.password">
         </div>
       </div>
       <div class="text-center">
