--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -14,23 +14,28 @@
     [style.display]="menuVisible ? 'block' : 'none'">
     <ul class="nav justify-content-center">
       <li class="nav-item">
-        <a class="nav-link" routerLink="detalles"><button id="btn-detalles" type="button" class="btn btn-outline-light"
-            onclick="highlightActiveButton('btn-detalles')">Estado de la Cuenta</button></a>
+        <a class="nav-link" routerLink="detalles" routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true}"><button id="btn-detalles" type="button"
+            class="btn btn-outline-light">Estado de la Cuenta</button></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="movimientos"><button id="movimientos" type="button"
+        <a class="nav-link" routerLink="movimientos" routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true}"><button id="movimientos" type="button"
             class="btn btn-outline-light">Movimientos</button></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="operaciones"><button id="operaciones" type="button"
+        <a class="nav-link" routerLink="operaciones" routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true}"><button id="operaciones" type="button"
             class="btn btn-outline-light">Operaciones</button></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="productos"><button id="productos" type="button"
+        <a class="nav-link" routerLink="productos" routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true}"><button id="productos" type="button"
             class="btn btn-outline-light">Productos Asociados</button></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link a" routerLink="ajustes"><button id="ajustes" type="button"
+        <a class="nav-link a" routerLink="ajustes" routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true}"><button id="ajustes" type="button"
             class="btn btn-outline-light">Ajustes de la Cuenta</button></a>
       </li>
     </ul>
