--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,7 @@
+<head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+</head>
+
 <body class="green-background">
     <footer class="footer">
         <footer class="footer bg-success">
@@ -14,9 +18,9 @@
                         <h3>Enlaces rápidos</h3>
                         <ul>
                             <h6>
-                                <li><a class="texto-primario" href="#">Inicio</a></li>
+                                <li><a class="texto-primario" href="header.component.html">Inicio</a></li>
                                 <li><a class="texto-primario" href="#">Detalles</a></li>
-                                <li><a class="texto-primario" href="#">Movimientos</a></li>
+                                <li><a class="texto-primario" href="movimientos.component.html">Movimientos</a></li>
                                 <li><a class="texto-primario" href="#">Operaciones</a></li>
                                 <li><a class="texto-primario" href="#">Mis Productos</a></li>
                                 <li><a class="texto-primario" href="#">Mis Cuentas</a></li>
@@ -32,16 +36,16 @@
                         <div class="btn-group">
                             
                             <a href="https://www.facebook.com/" target="_blank" class="btn btn-primary">
-                                <i class="fab fa-facebook-f" >facebook</i>
+                                <i class="fab fa-facebook-f" ></i>
                             </a>
                             <a href="https://www.twitter.com/" target="_blank" class="btn btn-info">
-                                <i class="fab fa-twitter" >twitter</i>
+                                <i class="fab fa-twitter" ></i>
                             </a>
                             <a href="https://www.linkedin.com/" target="_blank" class="btn btn-primary">
-                                <i class="fab fa-linkedin-in" >linkedin</i>
+                                <i class="fab fa-linkedin-in" ></i>
                             </a>
                             <a href="https://www.instagram.com/" target="_blank" class="btn btn-danger">
-                                <i class="fab fa-instagram" >instagram</i>
+                                <i class="fab fa-instagram" ></i>
                             </a>
                         </div>
                     </div>
