--- a/src/styles.css
+++ b/src/styles.css
@@ -35,3 +35,5 @@
 .fondo-resaltado{
     background: rgb(187, 187, 187);
 } */
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
