--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -21,7 +21,7 @@
                                 <li><a class="texto-primario" href="header.component.html">Inicio</a></li>
                                 <li><a class="texto-primario" href="#">Detalles</a></li>
                                 <li><a class="texto-primario" href="movimientos.component.html">Movimientos</a></li>
-                                <li><a class="texto-primario" href="#">Operaciones</a></li>
+                                <li><a class="texto-primario" href="operaciones.component.html">Operaciones</a></li>
                                 <li><a class="texto-primario" href="#">Mis Productos</a></li>
                                 <li><a class="texto-primario" href="#">Mis Cuentas</a></li>
                                 <li><a class="texto-primario" href="#">Aviso legal</a></li>
