--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -4,7 +4,6 @@
     font-weight: bold;
 }
 
-.nav.active {
-    background-color: azure;
-    color: black;
+.router-link-active{
+    background-color: darkgreen;   
 }
