--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -35,7 +35,7 @@
           <p>365 días del año siempre estaremos a tu disposición.</p><br>
           <div>
             <div class="text-white" style="font-size: 100px; font-weight: bold; font-family: Arial, sans-serif;">0%
-            </div><span style="display: inline;">
+            </div><span style="display: inline;"><br>
               <h3> de intereses</h3>
             </span>
             <div class="col-md-12 mb-12 text-center">
