--- a/src/app/hazte-cliente/hazte-cliente.component.html
+++ b/src/app/hazte-cliente/hazte-cliente.component.html
@@ -78,7 +78,7 @@
 
       <div class="row">
         <div class="d-flex justify-content-center text-center">
-          <button class="btn btn-primary mx-2" (click)="guardaDatos()">Guardar</button>
+          <button class="btn btn-primary mx-2" (click)="guardaDatos()" disabled>Guardar</button>
           <button class="btn btn-primary mx-2" (click)="comprobarDatos()">Comprobar</button>
         </div>
       </div>
