--- a/src/app/hazte-cliente/hazte-cliente.component.html
+++ b/src/app/hazte-cliente/hazte-cliente.component.html
@@ -78,8 +78,10 @@
 
       <div class="row">
         <div class="d-flex justify-content-center text-center">
-          <button class="btn btn-primary mx-2" (click)="guardaDatos()" disabled>Guardar</button>
+          <button class="btn btn-primary mx-2" (click)="guardaDatos()" [disabled]="activo">Guardar</button>
+          <h1 class="message mat-display-1">{{mensajeCampos}}</h1>
           <button class="btn btn-primary mx-2" (click)="comprobarDatos()">Comprobar</button>
+        
         </div>
       </div>
 
@@ -88,7 +90,9 @@
           <h1 class="message mat-display-1">{{mensajeEmail}}</h1>
           <h1 class="message mat-display-1">{{mensajePhone}}</h1>
           <h1 class="message mat-display-1">{{mensajeUser}}</h1>
+          <h1 class="message mat-display-1">{{mensajeIdentification}}</h1>
           <h1 class="message mat-display-1">{{mensaje}}</h1>
+          
         </div>
       </div>
     </form>
