--- a/src/app/hazte-cliente/hazte-cliente.component.html
+++ b/src/app/hazte-cliente/hazte-cliente.component.html
@@ -54,7 +54,7 @@
       </div>
       <div class="row">
         <div class="col-md-6 mb-3">
-          <input (change)="cargarImagen($event)" type="file" name="imagen">
+          <input (change)="cargarImagen($event)" type="file" name="imagen"  [(ngModel)]="imageString">
         </div>
 
 
@@ -79,7 +79,7 @@
       <div class="row">
         <div class="d-flex justify-content-center text-center">
           <button class="btn btn-primary mx-2" (click)="guardaDatos()" [disabled]="activo">Guardar</button>
-          <h1 class="message mat-display-1">{{mensajeCampos}}</h1>
+          
           <button class="btn btn-primary mx-2" (click)="comprobarDatos()">Comprobar</button>
         
         </div>
@@ -91,6 +91,8 @@
           <h1 class="message mat-display-1">{{mensajePhone}}</h1>
           <h1 class="message mat-display-1">{{mensajeUser}}</h1>
           <h1 class="message mat-display-1">{{mensajeIdentification}}</h1>
+          <h1 class="message mat-display-1">{{mensajeCampos}}</h1>
+          <h1 class="message mat-display-1">{{mensajeImage}}</h1>
           <h1 class="message mat-display-1">{{mensaje}}</h1>
           
         </div>
