--- a/src/app/cuentas/cuentas.component.html
+++ b/src/app/cuentas/cuentas.component.html
@@ -11,7 +11,9 @@
                    <h2>Saldo total disponible:</h2>
                 </div>
                 <div class="ms-5">
-                    <h5>SALDO TOTAL</h5>
+                    <h5>SALDO TOTAL
+                        {{saldoTotal}}
+                    </h5>
                  </div>
             </td>
             <td>
