--- a/src/app/hazte-cliente/hazte-cliente.component.html
+++ b/src/app/hazte-cliente/hazte-cliente.component.html
@@ -54,7 +54,12 @@
       </div>
       <div class="row">
         <div class="col-md-6 mb-3">
-          <input (change)="cargarImagen($event)" type="file" name="imagen"  [(ngModel)]="imageString">
+          <input (change)="cargarImagen($event)" type="file" name="imagen" [(ngModel)]="imageString">
+          <div *ngIf="previsualizacionURL">
+            <img width="150" [src]="previsualizacionURL" alt="">
+          </div>
+
+
         </div>
 
 
@@ -79,9 +84,9 @@
       <div class="row">
         <div class="d-flex justify-content-center text-center">
           <button class="btn btn-primary mx-2" (click)="guardaDatos()" [disabled]="activo">Guardar</button>
-          
+
           <button class="btn btn-primary mx-2" (click)="comprobarDatos()">Comprobar</button>
-        
+
         </div>
       </div>
 
@@ -94,7 +99,7 @@
           <h1 class="message mat-display-1">{{mensajeCampos}}</h1>
           <h1 class="message mat-display-1">{{mensajeImage}}</h1>
           <h1 class="message mat-display-1">{{mensaje}}</h1>
-          
+
         </div>
       </div>
     </form>
