--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -4,5 +4,5 @@
   <app-nav *ngIf="logado"></app-nav>
   <app-login></app-login> 
 -->
-<app-nav *ngIf="!logado"></app-nav>  
+<app-nav></app-nav>  
 </header>
