--- a/src/app/componentes/nav/nav.component.html
+++ b/src/app/componentes/nav/nav.component.html
@@ -6,7 +6,7 @@
     <li class="nav-item">
       <a class="nav-link active bg-dark text-white" routerLink="usuarios">Usuarios</a>
     </li>
-    <li class="nav-item dropdown">
+    <li class="nav-item">
       <a class="nav-link active bg-dark text-white" routerLink="roles">Roles</a>
     </li>
     <li class="nav-item">
